force-app/main/default/objects/CBK_ForbiddenWord__c/CBK_ForbiddenWord__c.object-meta.xml
<CustomObject>
    <label>Palabra pohibida</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Nombre de la Palabra pohibida</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Palabras prohibidas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>