force-app/main/default/objects/CBK_ForbiddenWord__c/fields/CBK_EXPRES__c.field-meta.xml
<CustomField>
    <fullName>CBK_EXPRES__c</fullName>
    <description>Almacena la palabra prohibida.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Palabra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>