force-app/main/default/objects/CBK_ForbiddenWord__c/fields/CBK_IsActive__c.field-meta.xml
<CustomField>
    <fullName>CBK_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la palabra prohibida está activa o no.</description>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>