force-app/main/default/objects/CBK_ForbiddenWord__c/fields/CBK_TIPAVI__c.field-meta.xml
<CustomField>
    <fullName>CBK_TIPAVI__c</fullName>
    <description>Indica el tipo de mensaje que debe mostrarse al usuario.</description>
    <label>Tipo de error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>AVISO</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>ERROR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>